# 10315-Art-ML

./: .gitignore  README.md  main.py  pyproject.toml
classification_features/: inference.py
data_generation/: README.md  download_data.py  download_from_google.py  process_poses.py  write_classification_features.py
pose_module/: basicInference.py  inferFull.py  inference.py  interpret_mhr_params.py  preprocess.py  test.py
pose_module/sam3d/sam_3d_body/models/heads/: mhr_head.py
pose_module/sam3d/tools/: vis_utils.py
sam-3d-body/: inference.py
topKRetrieval/: classificationFeatureRetrieval.py  squaredDistanceRetrieval.py  topKRetrieval.py
vae_features/loss/: hyperSphericalLoss.py
vae_features/loss/distributions/: projectedNormal.py  vonMishFisher.py
vae_features/model/: feedForwardVae.py  graphVae.py
vae_features/utils/: angleFormat.py  downsample.py  feedForward.py  graph.py  graphBlocks.py  graphformer.py  graphormerGraph.py  jointEmbedding.py  positionalEncoding.py  skeletonFormat.py
visualization/: faces.json  visualize_pose.py  visualize_retrieval.py
